--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "deploy": "gh-pages -d dist -r https://github.com/geralt-ji/Summer_Camp.git -b gh-pages"
   },
   "dependencies": {
     "nuxt": "^3.14.1592",
